crates/cockpitctl-cli/tests/snapshots/ingest_golden__single_sensor_pass_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `emptycheck` | ✅ pass | yes | `artifacts/emptycheck/report.json` |

### Highlights

_No highlights._

### Annotations

_No annotations._

### Repo contract

- `emptycheck`: ✅ pass · report `artifacts/emptycheck/report.json`
  - repro: `emptycheck run`

<!-- cockpit:end -->
