crates/cockpitctl-cli/tests/snapshots/ingest_golden__three_sensor_mixed_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ✅ pass | yes | `artifacts/builddiag/report.json` |
| `stylechecker` | ⚠️ warn | no | `artifacts/stylechecker/report.json` |
| `secaudit` | ❌ fail | yes | `artifacts/secaudit/report.json` |

### Highlights

(showing up to **7**)

1. ❌ **secaudit**: `secaudit.xss_vuln` at `src/render.rs:33` — Cross-site scripting vulnerability in template rendering
2. ⚠️ **stylechecker**: `stylechecker.long_line` at `src/main.rs:55` — Line exceeds 120 character limit

### Annotations

1. ❌ **secaudit**: `secaudit.xss_vuln` at `src/render.rs:33` — Cross-site scripting vulnerability in template rendering
2. ⚠️ **stylechecker**: `stylechecker.long_line` at `src/main.rs:55` — Line exceeds 120 character limit

### Build

- `builddiag`: ✅ pass · report `artifacts/builddiag/report.json`
  - repro: `builddiag check`

### Style

- `stylechecker`: ⚠️ warn · report `artifacts/stylechecker/report.json`
  - repro: `stylechecker lint`

### Security

- `secaudit`: ❌ fail · report `artifacts/secaudit/report.json`
  - repro: `secaudit scan`

<!-- cockpit:end -->
