crates/cockpitctl-cli/tests/snapshots/ingest_golden__tokmd_sensor_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `tokmd` | ✅ pass | no | `artifacts/tokmd/report.json` |

### Highlights

(showing up to **7**)

1. ℹ️ **tokmd**: `token-count` at `src/lib.rs:1` — File contains 567 tokens (budget: 5000)
2. ℹ️ **tokmd**: `token-count` at `src/main.rs:1` — File contains 1234 tokens (budget: 5000)

### Annotations

1. ℹ️ **tokmd**: `token-count` at `src/lib.rs:1` — File contains 567 tokens (budget: 5000)
2. ℹ️ **tokmd**: `token-count` at `src/main.rs:1` — File contains 1234 tokens (budget: 5000)

### Token budgets

- `tokmd`: ✅ pass · report `artifacts/tokmd/report.json`
  - repro: `tokmd check --budget 5000`

<!-- cockpit:end -->
