crates/cockpitctl-cli/tests/snapshots/ingest_golden__tokmd_sensor_report.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "cockpitctl",
    "version": "0.3.0"
  },
  "run": {
    "started_at": "2026-02-02T12:00:00Z"
  },
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 2,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  },
  "sensors": [
    {
      "id": "tokmd",
      "blocking": false,
      "missing": "skip",
      "presence": "present",
      "report_path": "artifacts/tokmd/report.json",
      "verdict": {
        "status": "pass",
        "counts": {
          "info": 2,
          "warn": 0,
          "error": 0
        },
        "reasons": [
          "token_count_within_budget"
        ]
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "informational"
    }
  ],
  "highlights": [
    {
      "sensor_id": "tokmd",
      "finding": {
        "severity": "info",
        "code": "token-count",
        "message": "File contains 567 tokens (budget: 5000)",
        "location": {
          "path": "src/lib.rs",
          "line": 1
        },
        "fingerprint": "80d26635f7079b3f8c655bf7bd866604fc3809f02899c7c4700f80f7b9b631f1"
      }
    },
    {
      "sensor_id": "tokmd",
      "finding": {
        "severity": "info",
        "code": "token-count",
        "message": "File contains 1234 tokens (budget: 5000)",
        "location": {
          "path": "src/main.rs",
          "line": 1
        },
        "fingerprint": "781e0c9fe2161089eac0bcef3957ce994e7e5959d6472626f8b38e1622a473c8"
      }
    }
  ],
  "policy": {
    "warn_is_fail": false,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Token budgets",
      "Other"
    ],
    "sensors": [
      {
        "id": "tokmd",
        "blocking": false,
        "missing": "skip",
        "section": "Token budgets",
        "repro": "tokmd check --budget 5000"
      }
    ]
  }
}
