crates/cockpitctl-cli/tests/snapshots/ingest_golden__warn_is_fail_comment.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: comment
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `linter` | ⚠️ warn | yes | `artifacts/linter/report.json` |

### Highlights

(showing up to **7**)

1. ⚠️ **linter**: `linter.missing_docs` at `src/lib.rs:42` — Missing documentation for public function `process`
2. ⚠️ **linter**: `linter.unused_variable` at `src/main.rs:15` — Unused variable: `temp`

### Annotations

1. ⚠️ **linter**: `linter.missing_docs` at `src/lib.rs:42` — Missing documentation for public function `process`
2. ⚠️ **linter**: `linter.unused_variable` at `src/main.rs:15` — Unused variable: `temp`

### Lint

- `linter`: ⚠️ warn · report `artifacts/linter/report.json`
  - repro: `linter check --workspace`

<!-- cockpit:end -->
