crates/cockpitctl-cli/tests/snapshots/ingest_golden__warn_is_fail_report.snap
---
source: crates/cockpitctl-cli/tests/ingest_golden.rs
expression: report
---
{
  "schema": "cockpit.report.v1",
  "tool": {
    "name": "cockpitctl",
    "version": "0.3.0"
  },
  "run": {
    "started_at": "2026-02-02T12:00:00Z"
  },
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 0,
      "warn": 2,
      "error": 0
    },
    "reasons": [
      "warn_is_fail"
    ]
  },
  "sensors": [
    {
      "id": "linter",
      "blocking": true,
      "missing": "fail",
      "presence": "present",
      "report_path": "artifacts/linter/report.json",
      "verdict": {
        "status": "warn",
        "counts": {
          "info": 0,
          "warn": 2,
          "error": 0
        },
        "reasons": []
      },
      "truncated": false,
      "errors": [],
      "policy_outcome": "allowed"
    }
  ],
  "highlights": [
    {
      "sensor_id": "linter",
      "finding": {
        "severity": "warn",
        "code": "linter.missing_docs",
        "message": "Missing documentation for public function `process`",
        "location": {
          "path": "src/lib.rs",
          "line": 42
        },
        "fingerprint": "ea60125d74b71114a746b27aae1234f23aab07e248a4dc3ff46f47fa63ed6a6d"
      }
    },
    {
      "sensor_id": "linter",
      "finding": {
        "severity": "warn",
        "code": "linter.unused_variable",
        "message": "Unused variable: `temp`",
        "location": {
          "path": "src/main.rs",
          "line": 15
        },
        "fingerprint": "33232c87474b9f972359ed1d15a13bc8b3f96da13221cece6d7b1a3225613eac"
      }
    }
  ],
  "policy": {
    "warn_is_fail": true,
    "max_highlights": 7,
    "max_per_sensor_findings": 20,
    "max_annotations": 25,
    "section_order": [
      "Highlights",
      "Lint",
      "Other"
    ],
    "sensors": [
      {
        "id": "linter",
        "blocking": true,
        "missing": "fail",
        "section": "Lint",
        "repro": "linter check --workspace"
      }
    ]
  }
}
